
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct ath_hal {int dummy; } ;


 int AR_PHY_FIND_SIG ;
 int AR_PHY_FIND_SIG_FIRPWR ;
 int AR_PHY_FIND_SIG_FIRPWR_SIGN_BIT ;
 int AR_PHY_FIND_SIG_FIRSTEP ;
 int AR_PHY_FIND_SIG_LOW ;
 int AR_PHY_FIND_SIG_LOW_FIRPWR ;
 int AR_PHY_FIND_SIG_LOW_FIRPWR_SIGN_BIT ;
 int AR_PHY_FIND_SIG_LOW_FIRSTEP_LOW ;
 int AR_PHY_FIND_SIG_LOW_RELSTEP ;
 int AR_PHY_FIND_SIG_LOW_RELSTEP_SIGN_BIT ;
 int AR_PHY_FIND_SIG_RELPWR ;
 int AR_PHY_FIND_SIG_RELPWR_SIGN_BIT ;
 int AR_PHY_FIND_SIG_RELSTEP ;
 int AR_PHY_FIND_SIG_RELSTEP_SIGN_BIT ;
 int OS_REG_CLR_BIT (struct ath_hal*,int ,int ) ;
 int OS_REG_RMW_FIELD (struct ath_hal*,int ,int ,int) ;

void
ar9300_disable_weak_signal(struct ath_hal *ah)
{

    OS_REG_RMW_FIELD(ah, AR_PHY_FIND_SIG, AR_PHY_FIND_SIG_FIRPWR, 0x7f);
    OS_REG_CLR_BIT(ah, AR_PHY_FIND_SIG, AR_PHY_FIND_SIG_FIRPWR_SIGN_BIT);


    OS_REG_RMW_FIELD(ah, AR_PHY_FIND_SIG, AR_PHY_FIND_SIG_FIRSTEP, 0x3f);


    OS_REG_RMW_FIELD(ah, AR_PHY_FIND_SIG, AR_PHY_FIND_SIG_RELPWR, 0x1f);
    OS_REG_CLR_BIT(ah, AR_PHY_FIND_SIG, AR_PHY_FIND_SIG_RELPWR_SIGN_BIT);


    OS_REG_RMW_FIELD(ah, AR_PHY_FIND_SIG, AR_PHY_FIND_SIG_RELSTEP, 0x1f);
    OS_REG_CLR_BIT(ah, AR_PHY_FIND_SIG, AR_PHY_FIND_SIG_RELSTEP_SIGN_BIT);


    OS_REG_RMW_FIELD(ah, AR_PHY_FIND_SIG_LOW, AR_PHY_FIND_SIG_LOW_FIRPWR, 0x7f);
    OS_REG_CLR_BIT(
        ah, AR_PHY_FIND_SIG_LOW, AR_PHY_FIND_SIG_LOW_FIRPWR_SIGN_BIT);


    OS_REG_RMW_FIELD(
        ah, AR_PHY_FIND_SIG_LOW, AR_PHY_FIND_SIG_LOW_FIRSTEP_LOW, 0x3f);


    OS_REG_RMW_FIELD(
        ah, AR_PHY_FIND_SIG_LOW, AR_PHY_FIND_SIG_LOW_RELSTEP, 0x1f);
    OS_REG_CLR_BIT(
        ah, AR_PHY_FIND_SIG_LOW, AR_PHY_FIND_SIG_LOW_RELSTEP_SIGN_BIT);
}
